GNOME Bugzilla – Bug 749889
dleyna: Fix grl_dleyna_util_uri_is_localhost() usage
Last modified: 2015-06-10 09:39:25 UTC
.
Created attachment 303990 [details] [review] dleyna: Fix grl_dleyna_util_uri_is_localhost() usage From coverity: grilo-plugins-0.2.14/src/dleyna/grl-dleyna-source.c:1207: swapped_arguments: The positions of arguments in the call to "grl_dleyna_util_uri_is_localhost" do not match the ordering of the parameters: * "&localhost" is passed to "localuser" * "&localuser" is passed to "localhost"
Attachment 303990 [details] pushed as f94046c - dleyna: Fix grl_dleyna_util_uri_is_localhost() usage