dleyna: Fix grl_dleyna_util_uri_is_localhost() usage

From coverity:
grilo-plugins-0.2.14/src/dleyna/grl-dleyna-source.c:1207: swapped_arguments: The positions of arguments in the call to "grl_dleyna_util_uri_is_localhost" do not match the ordering of the parameters: * "&localhost" is passed to "localuser" * "&localuser" is passed to "localhost"

https://bugzilla.gnome.org/show_bug.cgi?id=749889